@@ -52,6 +52,7 @@ extra_scanners = MooseXTypesCombine
 ; authordep Test::LWP::MockSocket::http
 ; authordep Data::Printer
 ; authordep Test::DescribeMe
+; authordep Test::File
 
 ; build system
 [ExtraTests]
