@@ -13,6 +13,15 @@ with qw(
     MooseX::Log::Log4perl
 );
     
+sub BUILD {
+    my $self = shift;
+    
+    $self->init_logging(@_);
+    $self->log->logcroak(
+        'jpeg2000list must be given when dest_format_key = list'
+    ) if $self->dest_format_key eq 'list' && ! $self->has_jpeg2000list;
+}
+
 use namespace::autoclean;
 
 __PACKAGE__->meta->make_immutable;
