@@ -1,4 +1,4 @@
-Dateiname;Seite;Struktur / 1. Ebene;Struktur / 2. Ebene (Kapitel);Struktur / 3. Ebene (Unterkapitel);Struktur / 4. Ebene (...)
-ubr00003_0001.pdf
-ubr00003_0002.pdf
-ubr00003_0003.pdf
+Dateiname;Seite;"Struktur / 1. Ebene";"Struktur / 2. Ebene (Kapitel)";"Struktur / 3. Ebene (Unterkapitel)";"Struktur / 4. Ebene (...)"
+ubr00003_0001;1
+ubr00003_0002;2
+ubr00003_0003;3
